# VariableEliminationForBayesianNetwork

./: CMakeLists.txt  README.md  main.cpp
exampleNetworks/: ARM_properties_net_alt.xdsl  prova_1.xdsl  prova_2.xdsl
graph/: Graph.cpp  Graph.h  GraphElements.cpp  GraphElements.h
inference/: VariableElimination.cpp  VariableElimination.h
network/: BayesianNetwork.cpp  BayesianNetwork.h  reader.cpp  reader.h
network/base/: CMakeLists.txt
probability/: CPT.cpp  CPT.h
